# src/controllers/QuestionnaireController.ts
@@ -6,10 +6,12 @@
 
 import { Request, Response } from 'express';
 
-import { Controller, Get, Middleware } from '@overnightjs/core';
+import { Controller, Get, Middleware, Post, Put } from '@overnightjs/core';
 
 import { QuestionnaireModel } from '../models/QuestionnaireModel';
 import { AuthorizationController } from './AuthorizationController';
+import jwt from 'express-jwt';
+import { AuthConfig } from '../config/AuthConfig';
 
 /**
  * Endpoint class for all questionnaire related restful methods.
@@ -48,6 +50,83 @@ export class QuestionnaireController {
                 } else {
                     res.status(500).end();
                 }
+            }
+        );
+    }
+
+    /**
+     * Add a questionnaire.
+     *
+     * @param {Request} req
+     * @param {Response} res
+     * @memberof QuestionnaireController
+     */
+    @Post('')
+    @Middleware(
+        jwt({
+            secret: AuthConfig.jwtSecret,
+            algorithms: ['HS256'],
+            requestProperty: 'payload',
+            isRevoked: AuthorizationController.checkApiUserLogin
+        })
+    )
+    public async addQuestionnaire(req: Request, res: Response) {
+        const url = req.body.url;
+        const version = req.body.version;
+        const name = req.body.name;
+        const questionnaire = req.body.questionnaire;
+
+        this.questionnaireModel.addQuestionnaire(url, version, name, questionnaire).then(
+            () => {
+                res.status(200).send();
+            },
+            (err) => {
+                if (err.code === '409') {
+                    res.status(409).send('A questionnaire with this name already exists.');
+                } else {
+                    res.status(500).send();
+                }
+            }
+        );
+    }
+
+    /**
+     * Update a questionnaire.
+     *
+     * @param {Request} req
+     * @param {Response} res
+     * @memberof QuestionnaireController
+     */
+    @Put('')
+    @Middleware(
+        jwt({
+            secret: AuthConfig.jwtSecret,
+            algorithms: ['HS256'],
+            requestProperty: 'payload',
+            isRevoked: AuthorizationController.checkApiUserLogin
+        })
+    )
+    public async updateQuestionnaire(req: Request, res: Response) {
+        const url = req.body.url;
+        const version = req.body.version;
+        const name = req.body.name;
+        const questionnaire = req.body.questionnaire;
+
+        this.questionnaireModel.updateQuestionnaire(url, version, name, questionnaire).then(
+            () => {
+                res.status(200).send();
+            },
+            (err) => {
+                if (err.code === 409) {
+                    res.status(409).send(
+                        'A questionnaire with this url and version already exists.'
+                    );
+                } else if (err.code === 404) {
+                    res.status(404).send(
+                        'No questionnaire with given url and name found to update'
+                    );
+                }
+                res.status(500).send();
             }
         );
     }
