# src/models/QuestionnaireModel.ts
@@ -7,6 +7,7 @@ import Logger from 'jet-logger';
 import { COMPASSConfig } from '../config/COMPASSConfig';
 import { ParticipantModel } from '../models/ParticipantModel';
 import DB from '../server/DB';
+import { IdHelper } from '../services/IdHelper';
 
 /**
  * Model class that bundles the logic for access to the questionnaire related tables.
@@ -65,6 +66,98 @@ export class QuestionnaireModel {
             Logger.Err('!!! DB might be inconsistent. Check DB !!!');
             Logger.Err(e);
             throw e;
+        } finally {
+            dbClient.release();
+        }
+    }
+
+    /**
+     * Add the questionnaire with the given id to the list of questionnaires and to the version list of all questionnaires
+     *
+     * @param {string} url the url of the questionnaire as defined in its metadata
+     * @param {string} version the version of the questionnaire as defined in its metadata
+     * @param {string} name the name of the questionnaire which also identifies it as configure in the COMPASSConfig
+     * @param {object} questionnaire the questionnaire itself as json
+     * @return {*}  {Promise<string>}
+     * @memberof QuestionnaireModel
+     */
+    public async addQuestionnaire(
+        url: string,
+        version: string,
+        name: string,
+        questionnaire: string
+    ): Promise<void> {
+        const dbClient = await DB.getPool().connect();
+        try {
+            // Make sure there isn't a questionnaire yet with the given id
+            const res = await dbClient.query('SELECT * FROM questionnaires WHERE id = $1', [name]);
+            if (res.rows.length !== 0) {
+                throw { code: 409 };
+            }
+            await dbClient.query('INSERT INTO questionnaires(id, body) VALUES($1, $2)', [
+                name,
+                questionnaire
+            ]);
+            dbClient.query('INSERT INTO questionnaire_version_history VALUES($1, $2, $3, $4, $5)', [
+                IdHelper.createID(),
+                url,
+                version,
+                name,
+                questionnaire
+            ]);
+        } catch (error) {
+            Logger.Err(error);
+            throw error;
+        } finally {
+            dbClient.release();
+        }
+    }
+
+    /**
+     * Update an existing questionnaire and add the new version to the version history.
+     *
+     * @param {string} url the url of the questionnaire as defined in its metadata
+     * @param {string} version the version of the questionnaire as defined in its metadata
+     * @param {string} name the name of the questionnaire which also identifies it as configure in the COMPASSConfig
+     * @param {object} questionnaire the questionnaire itself as json
+     * @return {*}  {Promise<string>}
+     * @memberof QuestionnaireModel
+     */
+    public async updateQuestionnaire(
+        url: string,
+        version: string,
+        name: string,
+        questionnaire: string
+    ): Promise<void> {
+        const dbClient = await DB.getPool().connect();
+        try {
+            // Make sure there is no questionnaire present with the given url and version
+            const res1 = await dbClient.query(
+                'SELECT * FROM questionnaire_version_history WHERE url = $1 AND version = $2',
+                [url, version]
+            );
+            if (res1.rows.length === 1) {
+                throw { code: 409 };
+            }
+            // Make sure there is a questionnaire with the given url and name
+            const res2 = await dbClient.query(
+                'SELECT * FROM questionnaire_version_history WHERE url = $1 AND name = $2',
+                [url, name]
+            );
+            if (res2.rows.length === 0) {
+                throw { code: 404 };
+            }
+            await dbClient.query(
+                'INSERT INTO questionnaire_version_history VALUES($1, $2, $3, $4, $5)',
+                [IdHelper.createID(), url, version, name, questionnaire]
+            );
+            dbClient.query('UPDATE questionnaires SET body = $1 WHERE id = $2 RETURNING id', [
+                questionnaire,
+                name
+            ]);
+        } catch (error) {
+            Logger.Err(error);
+            throw error;
         } finally {
             dbClient.release();
         }
